Revised HTML structure and changed JS module

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="index.css" />
+
+<!-- MENU -->
+
 <button class="menuOpener">Menu</button>
 <div class="vertical-menu">
   <a href="#" class="active">Link 1</a>
@@ -12,4 +15,7 @@
   <a href="#">Link 9</a>
   <a href="#">Link 10</a>
 </div>
+
+<!-- MENU -->
+
 <script src="index.js"></script>
